update chart trending
