# api-docs.yaml
@@ -92,6 +92,25 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponseObject'
+  /visum/song/{songId}/view:
+    post:
+      tags:
+      - song-controller
+      operationId: increaseSongView
+      parameters:
+      - name: songId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponseTrending'
   /visum/playlist:
     post:
       tags:
@@ -411,6 +430,36 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponsePageSong'
+  /visum/song/chart:
+    get:
+      tags:
+      - song-controller
+      operationId: getSongChart
+      parameters:
+      - name: page
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int32
+      - name: size
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int32
+      - name: sortBy
+        in: query
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponseChartResponse'
   /visum/singer/{singerId}:
     get:
       tags:
@@ -586,6 +635,31 @@ paths:
         required: true
         schema:
           type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponsePageSong'
+  /visum/favorite/songs:
+    get:
+      tags:
+      - user-controller
+      operationId: recommendSongNotInFavorite
+      parameters:
+      - name: page
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int32
+      - name: size
+        in: query
+        required: true
+        schema:
+          type: integer
+          format: int32
       responses:
         "200":
           description: OK
@@ -919,6 +993,35 @@ components:
         responseCode:
           type: integer
           format: int32
+    ApiResponseTrending:
+      type: object
+      properties:
+        result:
+          $ref: '#/components/schemas/Trending'
+        errorCode:
+          type: string
+        message:
+          type: object
+        responseCode:
+          type: integer
+          format: int32
+    Trending:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        week:
+          type: integer
+          format: int32
+        day:
+          type: integer
+          format: int32
+        viewsDay:
+          type: integer
+          format: int32
+        song:
+          $ref: '#/components/schemas/Song'
     ApiResponsePlaylist:
       type: object
       properties:
@@ -1199,10 +1302,10 @@ components:
           format: int64
         sort:
           $ref: '#/components/schemas/Sort'
-        pageSize:
+        pageNumber:
           type: integer
           format: int32
-        pageNumber:
+        pageSize:
           type: integer
           format: int32
         paged:
@@ -1230,6 +1333,40 @@ components:
         responseCode:
           type: integer
           format: int32
+    ApiResponseChartResponse:
+      type: object
+      properties:
+        result:
+          $ref: '#/components/schemas/ChartResponse'
+        errorCode:
+          type: string
+        message:
+          type: object
+        responseCode:
+          type: integer
+          format: int32
+    ChartResponse:
+      type: object
+      properties:
+        top1:
+          type: array
+          items:
+            type: integer
+            format: int32
+        top2:
+          type: array
+          items:
+            type: integer
+            format: int32
+        top3:
+          type: array
+          items:
+            type: integer
+            format: int32
+        songs:
+          type: array
+          items:
+            $ref: '#/components/schemas/Song'
     ApiResponseSingerDTO:
       type: object
       properties:
