# src/app/api-svc/model/models.ts
@@ -1,5 +1,6 @@
 export * from './album';
 export * from './apiResponseAlbum';
+export * from './apiResponseChartResponse';
 export * from './apiResponseComment';
 export * from './apiResponseJwtResponse';
 export * from './apiResponseListCategory';
@@ -18,8 +19,10 @@ export * from './apiResponsePlaylist';
 export * from './apiResponsePlaylistResponse';
 export * from './apiResponseSingerDTO';
 export * from './apiResponseSong';
+export * from './apiResponseTrending';
 export * from './apiResponseUser';
 export * from './category';
+export * from './chartResponse';
 export * from './comment';
 export * from './commentDTO';
 export * from './composer';
@@ -42,5 +45,6 @@ export * from './songByCategoryResponse';
 export * from './songDTO';
 export * from './sort';
 export * from './subCategory';
+export * from './trending';
 export * from './user';
 export * from './userDTO';
